Fix add users dialog long content overflows container height

--- a/src/app/modules/add-users-dialog/add-users-dialog.component.scss
+++ b/src/app/modules/add-users-dialog/add-users-dialog.component.scss
@@ -13,7 +13,12 @@
 }
 
 .list {
-	height: 50vh;
+	margin: 0 -10px;
+	padding: 0 10px;
+
+	overflow-y: auto;
+
+	height: 45vh;
 
 	.table {
 		padding: 0 0 12px;
